fix:responsive style fix

--- a/neemtree-website/IELTS.html
+++ b/neemtree-website/IELTS.html
@@ -16,7 +16,7 @@
 </head>
 <body>
  <header class="primary-header">
-    <a href="home.html"><img src="assets/NT_logo.svg" class="logo"></a>
+    <a href="home.html"><img src="./assets/NT_logo.svg" class="logo"></a>
     <nav class="primary-navigation">
       <ul role="list" class="nav-list">
         <li>
@@ -25,7 +25,7 @@
         <li>
           <div class="dropdown">
 
-            <div class="drop"><a href="#" class="destinations">Study Destinations <img src="assets/droparrow.svg"
+            <div class="drop"><a href="#" class="destinations">Study Destinations <img src="./assets/droparrow.svg"
                   alt=""></a></div>
 
 
@@ -41,7 +41,7 @@
 
         <li>
           <div class="dropdown">
-            <div class="drop"><a href="#" class="destinations">Test Preparation <img src="assets/droparrow.svg"
+            <div class="drop"><a href="#" class="destinations">Test Preparation <img src="./assets/droparrow.svg"
                   alt=""></a></div>
 
             <div class="dropdown-content">
@@ -284,7 +284,7 @@
               <button class="N"><img src="./IELTS.assets/Next.svg" class="nextarrow"/><p>Next</p></button>
         </div>
         <div class="consultation">
-          <img src="/Users/suryateja/Downloads/neemtree-website/about.assets/background1.png" alt="book" />
+          <img src="./about.assets/background1.png" alt="book" />
           <h2>Book Free Consultation</h2>
           <p class="caption">Build stronger Customer Relationship with <strong>Consultalk</strong></p>
               <button class="book">Book now</button>
@@ -292,7 +292,7 @@
        <footer>
         <div class="containerf">
           <div class="footer1">
-            <a href="home.html"><img src="assets/NT_logo.svg" class="logo"></a>
+            <a href="home.html"><img src="./assets/NT_logo.svg" class="logo"></a>
             <p>Some footer text about the Agency. Just a little description to help people understand you better.</p>
             <ul id="list">
               <li>
