--- a/neemtree-website/about.html
+++ b/neemtree-website/about.html
@@ -143,7 +143,7 @@
                                                             <img src="./about.assets/subtopic12.png" alt="sub12" />
                                                             </div>
                      <div class="consultation">
-                        <img src="/Users/suryateja/Downloads/neemtree-website/about.assets/background1.png" alt="book" />
+                        <img src="./about.assets/background1.png" alt="book" />
                         <h2>Book Free Consultation</h2>
                         <p class="caption">Build stronger Customer Relationship with <strong>Consultalk</strong>
                             <button class="book">Book now</button>
