--- a/neemtree-website/USA.html
+++ b/neemtree-website/USA.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <title>USA</title>
     <link rel="stylesheet" href="./USA.css" />
-  
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&family=Lato:wght@100;300;400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css"/>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 </head>
 <body>
     <div class="container1">
@@ -15,7 +22,7 @@
             <h2 class="stusa">Study in USA</h2>
             <div class="container2">
                 <div class="container3">
-                    <h3 class="heading1">Why Study in USA</h3>
+                    <h3 class="heading1">Why Study in USA ?</h3>
                     <p class="content1">Studying in the USA offers an unparalleled opportunity to engage with one of the world's most esteemed higher education systems. It provides access to state-of-the-art technology and cutting-edge research, creating an immersive and collaborative learning experience. With a vast array of schools, diverse study disciplines, and niche qualifications not readily available elsewhere, the USA offers academic choices tailored to your career aspirations. What sets it apart is the flexibility of the education system, allowing you to apply to various programs aligned with your academic and professional goals. Graduating from the USA equips you with a global perspective and practical skills essential for the future.</p>
                     <img src="./USA.assets/Content.png" class="content" />
                     <h3 class="heading2">Career and Industry Insights</h3>
@@ -34,12 +41,13 @@
                     <img src="./USA.assets/someonewithlaptop.png" class="lapboy"/>
                     </div>
                     <div class="consultation">
-                        <img src="/Users/suryateja/Downloads/neemtree-website/about.assets/background1.png" alt="book" />
+                        <img src="./about.assets/background1.png" alt="book" />
                         <h2>Book Free Consultation</h2>
-                        <p class="caption">Build stronger Customer Relationship with <strong>Consultalk</strong>
+                        <p class="caption">Build stronger Customer Relationship with <strong>Consultalk</strong></p>
                             <button class="book">Book now</button>
                      </div>
             </div>
-          
+            <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons." ></script>
+            <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/js"></script>
 </body>
 </html>
