responsive style phase2

--- a/neemtree-website/Ourservices.html
+++ b/neemtree-website/Ourservices.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="./Ourservices.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&family=Lato:wght@100;300;400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css"/>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     </head>
@@ -33,7 +33,7 @@
                         <div class="container5">
                             <h2>Our Core Values</h2>
                             <p class="content5">Our values ensure that all students who apply for international study through NEEMTREE can have confidence that all information is accurate and up to date.</p>
-                            <ul>
+                            <ul class="list1">
                                 <li><img class="tick" src="./assets/Tick.svg" alt=""><strong>Integrity :</strong><p class="subcontent"> All transactions between students and institutions are honest and transparent.</p></li>
                                 <li><img class="tick" src="./assets/Tick.svg" alt=""><strong>Ethical :</strong><p class="subcontent2">All applications and advice given is correct, and supplied through the proper governing bodies.</p></li>
                                 <li><img class="tick" src="./assets/Tick.svg" alt=""><strong>Knowledgeable :</strong><p class="subcontent3">All information supplied is accurate and up to date.</p></li>
