--- a/neemtree-website/about.html
+++ b/neemtree-website/about.html
@@ -6,10 +6,11 @@
         <title>About</title>
         <link rel="stylesheet" href="./about.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&family=Lato:wght@100;300;400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   
@@ -147,80 +148,7 @@
                         <h2>Book Free Consultation</h2>
                         <p class="caption">Build stronger Customer Relationship with <strong>Consultalk</strong>
                             <button class="book">Book now</button>
-                     </div>
-                     <main>
-                     <footer>
-                        <div class="container">
-                          <div class="footer1">
-                            <a href="home.html"><img src="assets/NT_logo.svg" class="logo"></a>
-                            <p>Some footer text about the Agency. Just a little description to help people understand you better.</p>
-                            <ul id="list">
-                              <li>
-                                <a href="#" class="social-link">
-                                  <ion-icon name="logo-facebook" size="large"></ion-icon>
-                                </a>
-                              </li>
-                              <li>
-                                <a href="#" class="social-link">
-                                  <ion-icon name="logo-twitter"  size="large"></ion-icon>
-                                </a>
-                              </li>
-                              <li>
-                                <a href="#" class="social-link">
-                                  <ion-icon name="logo-linkedin"  size="large"></ion-icon>
-                                </a>
-                              </li>
-                              <li>
-                                <a href="#" class="social-link">
-                                  <ion-icon name="logo-instagram"  size="large"></ion-icon>
-                                </a>
-                              </li>
-                            </ul>
-                            <p class="copyright">Copyright 2023 NEEMTREE, All rights reserved.</p>
-                          </div>
-                          <div class="footer2">
-                            <nav class="footer-nav">
-                              <h3>Quick Links</h3>
-                              <ul aria-label="Footer" role="list" id="list1">
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Study Destinations</a></li>
-                                <li><a href="#">Test Preparation</a></li>
-                                <li><a href="#">What we provide</a></li>
-                                <li><a href="#">Our Services</a></li>
-                                <li><a href="#">Contact us</a></li>
-                                <li><a href="#">Book free consultation</a></li>
-                              </ul>
-                            </nav>
-                          </div>
-                          <div class="footer3">
-                            <nav class="footer-nav">
-                              <h3>Study Destinations</h3>
-                              <ul aria-label="Footer" role="list" id="list1">
-                                <li><a href="#">USA</a></li>
-                                <li><a href="#">UK</a></li>
-                                <li><a href="#">Canada</a></li>
-                                <li><a href="#">Australia</a></li>
-                                <li><a href="#">Rest of the world</a></li>
-                              </ul>
-                            </nav>
-                          </div>
-                          <div>
-                            <nav class="footer-nav">
-                              <h3>Test Preparation</h3>
-                              <ul aria-label="Footer" role="list" id="list1">
-                                <li><a href="#">IELTS</a></li>
-                                <li><a href="#">TOEFL</a></li>
-                                <li><a href="#">PTE</a></li>
-                                <li><a href="#">GRE</a></li>
-                                <li><a href="#">GMAT</a></li>
-                                <li><a href="#">SAT</a></li>
-                              </ul>
-                            </nav>
-                          </div>
-                  
                         </div>
-                      </footer>
-                    </main>
                     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons." ></script>
                     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/js"></script>
     </body>
