--- a/bookingform1.html
+++ b/bookingform1.html
@@ -10,9 +10,12 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css"/>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     </head>
-    <div class="form">
+    <body>
+    <div class="form" id="form">
+        <div class="POPUP">
         <img src="./bookingform.assets/consultation-form.png" alt="booking form" class="form-background"/>
         <h2>Book Free Consultation</h2>
+        <span class="close-btn" onclick="closePopup()">&times;</span>
         <div class="form-content">
             <p>(*)Refers to mandatory</p>
             <label class="name">Name *</label>
@@ -26,4 +29,7 @@
             <button id="next" class="next">NEXT</button>
         </div>
         </div>
+        </div>
+        <script src="./main.js"></script>
+    </body>
 </html>
