--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <script defer src="main.js"></script>
 </head>
 
 <body>
@@ -851,7 +850,7 @@
     </footer>
     
   </main>
-<script defer src="main.js"></script>
+<script src="main.js"></script>
 </body>
 
 
