--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
             <div class="dropdown-content">
-              <a href="#">USA</a>
+              <a href="./USA.html">USA</a>
               <a href="#">UK</a>
               <a href="#">Canada</a>
             </div>
@@ -58,7 +58,7 @@
         </li>
 
         <li>
-          <a href="about.html" class="navbar-link">Services</a>
+          <a href="./about.html" class="navbar-link">Services</a>
         </li>
 
         <li>
