--- a/index.html
+++ b/index.html
@@ -224,27 +224,27 @@
         </h2>
         <div class="card-row">
           <div class="col-md-4">
-            <div class="card">
+            <div class="card1">
               <img src="assets/usa.svg" alt="USA">
               <p class="places">USA</p>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card">
+            <div class="card1">
               <img src="assets/uk.svg" alt="UK">
               <p class="places">UK</p>
             </div>
-            <div class="card">
+            <div class="card1">
               <img src="assets/canada.svg" alt="Canada">
               <p class="places">CANADA</p>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card">
+            <div class="card1">
               <img src="assets/aus.svg" alt="Australia">
               <p class="places">AUSTRALIA</p>
             </div>
-            <div class="card">
+            <div class="card1">
               <img src="assets/world.svg" alt="Rest of the World">
               <p class="places">REST of the WORLD</p>
             </div>
