--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           <h1 class="title1">Overseas Education Consultants</h1>
           <p class="matter1">We have the unique approach in tailoring the academic career to suit individual profile of
             the prospective student and provide A to Z services under one roof.</p>
-          <button class="btn1">Get Started</button>
+          <button class="btn1" onclick="openPopup()">Get Started</button>
         </div>
         <div class="images1">
           <img src="assets/header-cropped.svg" alt="image in home page" class="opening">
@@ -313,7 +313,7 @@
             <li><img src="assets/Tick.svg" alt="">Language Proficiency Assistance</li>
             <li><img src="assets/Tick.svg" alt="">Travel assistance</li>
           </ul>
-          <button class="btn3">Book Free Consultation</button>
+          <button class="btn3" onclick="openPopup()">Book Free Consultation</button>
         </div>
       </div>
     </section>
