fix: deploy fix v3

--- a/index.html
+++ b/index.html
@@ -771,13 +771,12 @@
     </section>
     <footer class="footer-bg">
 
-
+    
       <div class="row footer-row">
         <div class="col-md-3 col-sm-6 agency-info">
           <div class="agency-top">
             <a href="home.html"><img src="assets/NT_logo.svg" class="nt-logo"></a>
-            <p class="agency-text">Some footer text about the Agency. Just a little description to help people
-              understand you better.</p>
+            <p class="agency-text">Some footer text about the Agency. Just a little description to help people understand you better.</p>
           </div>
           <div class="agency-down">
             <ul role="list" class="media-layout">
@@ -789,7 +788,7 @@
             <p class="copy-text">Copyright 2023 NEEMTREE, All rights reserved.</p>
           </div>
         </div>
-
+  
         <div class="col-md-3 col-sm-6">
           <nav class="footer-nav">
             <h3 class="link-head">Quick Links</h3>
@@ -804,7 +803,7 @@
             </ul>
           </nav>
         </div>
-
+  
         <div class="col-md-3 col-sm-6">
           <nav class="footer-nav">
             <h3 class="link-head">Study Destinations</h3>
@@ -817,7 +816,7 @@
             </ul>
           </nav>
         </div>
-
+  
         <div class="col-md-3 col-sm-6">
           <nav class="footer-nav">
             <h3 class="link-head">Test Preparation</h3>
@@ -832,9 +831,9 @@
           </nav>
         </div>
       </div>
-
-
-    </footer>
+  
+    
+  </footer>
 
   </main>
   <script src="main.js" defer></script>
