--- a/IELTS.html
+++ b/IELTS.html
@@ -424,7 +424,7 @@
     
   </footer>
   </main>
-  <script src="main.js"></script>
+  <script src="main.js" defer></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons."></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/js"></script>
 </body>
