fix: homepage style fix

--- a/IELTS.html
+++ b/IELTS.html
@@ -62,7 +62,7 @@
         </li>
 
         <li>
-          <a href="#" class="navbar-link">Contact Us</a>
+          <a href="./Ourservices.html#CONTACTS" class="navbar-link">Contact Us</a>
         </li>
         <li> <button class="booking" onclick="openPopup()">Book Free Consultancy</button></li>
       </ul>
