--- a/Ourservices.html
+++ b/Ourservices.html
@@ -63,7 +63,7 @@
         </li>
 
         <li>
-          <a href="#" class="navbar-link">Contact Us</a>
+          <a href="./Ourservices.html#CONTACTS" class="navbar-link">Contact Us</a>
         </li>
         <li> <button class="booking" onclick="openPopup()">Book Free Consultancy</button></li>
       </ul>
@@ -263,7 +263,7 @@
     </section>
     
   <section>
-    <div class="container8">
+    <div class="container8" id="CONTACTS">
       <div class="odd align-heading">
         <div>
           <p class="banner-green">GET IN TOUCH</p>
