--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&family=Lato:wght@100;300;400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="Metropolis/Metropolis-Medium.otf.css">
+
   <title>Vite App</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
   <link rel="stylesheet" href="home.css">
@@ -62,7 +62,7 @@
         </li>
 
         <li>
-          <a href="#" class="navbar-link">Contact Us</a>
+          <a href="./Ourservices.html#CONTACTS" class="navbar-link">Contact Us</a>
         </li>
         <li> <button class="booking" onclick="openPopup()">Book Free Consultancy</button></li>
       </ul>
@@ -200,7 +200,8 @@
         <div class="card-row">
           <div class="col-md-4">
             <div class="card1">
-              <img src="assets/usa.svg" alt="USA">
+              <a href= "./USA.html">
+                <img src="assets/usa.svg" alt="USA"></a>
               <p class="places">USA</p>
             </div>
           </div>
@@ -236,61 +237,63 @@
         <div class="row">
 
           <div class="col-md-4">
-            <div class="test-card">
+            <a href="./IELTS.html" alt="IELTS"> <div class="test-card">
               <h3>IELTS</h3>
               <p>International English Language Testing System</p>
               <img src="assets/test-arrow.svg" alt="Arrow Image">
             </div>
           </div>
-
+        </a> 
 
           <div class="col-md-4">
-            <div class="test-card">
+           <a href="./IELTS.html" alt="TOEFL"><div class="test-card">
               <h3>TOEFL</h3>
               <p>Test of English as a Foreign Language</p>
               <img src="assets/test-arrow.svg" alt="Arrow Image">
             </div>
           </div>
-
+        </a> 
 
           <div class="col-md-4">
-            <div class="test-card">
+            <a href="./IELTS.html" alt="PTE"><div class="test-card">
               <h3>PTE</h3>
               <p>Pearson Test of English</p>
               <img src="assets/test-arrow.svg" alt="Arrow Image">
             </div>
           </div>
         </div>
-
+      </a> 
         <div class="row">
 
           <div class="col-md-4">
-            <div class="test-card">
+            <a href="./IELTS.html" alt="GRE"> <div class="test-card">
               <h3>GRE</h3>
               <p>Graduate Record Exam</p>
               <img src="assets/test-arrow.svg" alt="Arrow Image">
             </div>
           </div>
-
+        </a> 
 
           <div class="col-md-4">
-            <div class="test-card">
+            <a href="./IELTS.html" alt="GMAT"> <div class="test-card">
               <h3>GMAT</h3>
               <p>Graduate Management Admission Test</p>
               <img src="assets/test-arrow.svg" alt="Arrow Image">
             </div>
           </div>
-
+        </a> 
 
           <div class="col-md-4">
-            <div class="test-card">
+            <a href="./IELTS.html" alt="SAT"><div class="test-card">
               <h3>SAT</h3>
               <p>Scholastic Assessment Test</p>
               <img src="assets/test-arrow.svg" alt="Arrow Image">
             </div>
           </div>
+        </a> 
         </div>
       </div>
+
     </section>
 
     <section>
@@ -327,78 +330,86 @@
           <ol>
             <li>
               <div class="time-card">
-                <p><span>#1</span> Test Preparation</p> Cracking exams like GMAT, GRE, IELTS... is where you should
-                begin your journey with.
+                <p class="time-cardcontent1"><span>#1</span> Test Preparation</p> 
+               <p class="time-cardcontent">Cracking exams like GMAT, GRE, IELTS... is where you should
+                begin your journey with.</p>
               </div>
             </li>
             <li>
               <div class="time-card">
-                <p><span>#2</span> Expert Counselling</p> Speak with experts who have years of experience in the domain
-                and stay updated with the latest advancements.
+                <p class="time-cardcontent1"><span>#2</span> Expert Counselling</p> 
+                <p class="time-cardcontent">Speak with experts who have years of experience in the domain
+                and stay updated with the latest advancements.</p>
               </div>
             </li>
             <li>
               <div class="time-card">
-                <p><span>#3</span> Country Selection</p> Choice of country has significant effect on your career path
-                and
-                other important aspects.
+                <p class="time-cardcontent1"><span>#3</span> Country Selection</p> 
+                <p class="time-cardcontent">Choice of country has significant effect on your career path and
+                other important aspects.</p>
               </div>
             </li>
             <li>
               <div class="time-card">
-                <p><span>#4</span> University Selection</p> A good university is the primary key to unlocking your true
-                potential and carving out your best version.
+                <p class="time-cardcontent1"><span>#4</span> University Selection</p> 
+                <p class="time-cardcontent2">A good university is the primary key to unlocking your true
+                potential and carving out your best version.</p>
               </div>
             </li>
             <li>
               <div class="time-card">
-                <p><span>#5</span> Admission Formalities</p> From sending out your application to filling out every
-                minute
-                detail until your joining, there are a ton of admission formalities to complete.
+                <p class="time-cardcontent1"><span>#5</span> Admission Formalities</p> 
+                <p class="time-cardcontent2">From sending out your application to filling out every minute
+                detail until your joining, there are a ton of admission formalities to complete.</p>
               </div>
             </li>
             <li>
               <div class="time-card">
-                <p><span>#6</span> Scholarship Guidance</p> Every educational voyage is incomplete without a
-                scholarship, but
-                are you aware of all the options.
+                <p class="time-cardcontent1"><span>#6</span> Scholarship Guidance</p> 
+                <p class="time-cardcontent2">Every educational voyage is incomplete without a scholarship, but
+                are you aware of all the options.</p>
               </div>
             </li>
             <li>
               <div class="time-card">
-                <p><span>#7</span> Financial Assistance</p> Get to know about all the procedures and options to fund
-                your
-                world class education.
+                <p class="time-cardcontent1"><span>#7</span> Financial Assistance</p>
+                <p class="time-cardcontent2"> Get to know about all the procedures and options to fund your
+                world class education.</p>
               </div>
             </li>
             <li>
               <div class="time-card">
-                <p><span>#8</span> Interview Preparation</p> Every step is a challenge, and the most important of them
-                all is cracking all interviews.
+                <p class="time-cardcontent1"><span>#8</span> Interview Preparation</p> 
+                <p class="time-cardcontent2">Every step is a challenge, and the most important of them
+                all is cracking all interviews.</p>
               </div>
             </li>
             <li>
               <div class="time-card">
-                <p><span>#9</span> Visa Assistance</p> Get to know about all the procedures and options to fund your
-                world class education.
+                <p class="time-cardcontent1"><span>#9</span> Visa Assistance</p> 
+                <p class="time-cardcontent2">Get to know about all the procedures and options to fund your
+                world class education.</p>
               </div>
             </li>
             <li>
               <div class="time-card">
-                <p><span>#10</span> Forex Assistance</p> Every step is a challenge, and the most important of them all
-                is cracking all interviews.
+                <p class="time-cardcontent1"><span>#10</span> Forex Assistance</p> 
+                <p class="time-cardcontent2">Every step is a challenge, and the most important of them all
+                is cracking all interviews.</p>
               </div>
             </li>
             <li>
               <div class="time-card">
-                <p><span>#11</span> Air Ticket</p> Get the best deals on your travel charges and have a seamless booking
-                process.
+                <p class="time-cardcontent1"><span>#11</span> Air Ticket</p> 
+                <p class="time-cardcontent2">Get the best deals on your travel charges and have a seamless booking
+                process.</p>
               </div>
             </li>
             <li>
               <div class="time-card">
-                <p><span>#12</span> Travel Insurance</p> Now, apply for your travel insurance and then you are all set
-                to travel across the globe to pursue your World-class education.
+                <p class="time-cardcontent1"><span>#12</span> Travel Insurance</p> 
+                <p class="time-cardcontent2">Now, apply for your travel insurance and then you are all set
+                to travel across the globe to pursue your World-class education.</p>
               </div>
             </li>
           </ol>
