fix: homepage style fix phase 2

--- a/index.html
+++ b/index.html
@@ -338,14 +338,14 @@
             <li>
               <div class="time-card">
                 <p class="time-cardcontent1"><span>#2</span> Expert Counselling</p> 
-                <p class="time-cardcontent">Speak with experts who have years of experience in the domain
+                <p class="time-cardcontent2">Speak with experts who have years of experience in the domain
                 and stay updated with the latest advancements.</p>
               </div>
             </li>
             <li>
               <div class="time-card">
                 <p class="time-cardcontent1"><span>#3</span> Country Selection</p> 
-                <p class="time-cardcontent">Choice of country has significant effect on your career path and
+                <p class="time-cardcontent2">Choice of country has significant effect on your career path and
                 other important aspects.</p>
               </div>
             </li>
@@ -421,57 +421,43 @@
     <section>
       <div class="container7">
         <h2 class="title num-center">
-          Don’t Trust Our Words,<br>
+          Don’t Trust Our Words,<br />
           Trust The Numbers
         </h2>
         <div class="num-row justify-content-center">
-
+  
           <div class="custom-col">
             <div class="card text-center">
-
               <img src="assets/students1.svg" alt="Icon 1">
-
               <h3 class="num-heading">Enrolled Students</h3>
-
-              <p class="numbers">100 +</p>
+              <p class="numbers count enrolled-students"></p>
             </div>
           </div>
-
-
+  
           <div class="custom-col">
             <div class="card text-center">
-
               <img src="assets/universities2.svg" alt="Icon 2">
-
               <h3 class="num-heading">Affiliated universities</h3>
-
-              <p class="numbers">200 +</p>
+              <p class="numbers count affiliated-universities"></p>
             </div>
           </div>
-
-
+  
           <div class="custom-col">
             <div class="card text-center">
-
               <img src="assets/3courses.svg" alt="Icon 3">
-
               <h3 class="num-heading">Courses</h3>
-
-              <p class="numbers">100 +</p>
+              <p class="numbers count courses"></p>
             </div>
           </div>
-
-
+  
           <div class="custom-col">
             <div class="card text-center">
-
               <img src="assets/experience4.svg" alt="Icon 4">
-
               <h3 class="num-heading">Years of experience</h3>
-
-              <p class="numbers">2yrs</p>
+              <p class="numbers count experience"></p>
             </div>
           </div>
+  
         </div>
       </div>
     </section>
