--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
       <div class="containerform">
         <div class="right-columns">
           <h2>Let us reach out to you</h2>
-          <p>Build stronger Customer Relationships with Ne</p>
+          <p>Build stronger Customer Relationships with <strong>NeemTree</strong></p>
         </div>
         <form class="help-form">
           <div class="form-row">
@@ -760,7 +760,7 @@
               <input type="email" class="form-control" id="email" placeholder="Your Email Address" required>
             </div>
             <div class="form-group col-md-3">
-              <button type="submit" class="btn btn-primary btn-block">Submit</button>
+              <button type="submit" class="btn btn-primary btn-block" id="SUBMIT">Submit</button>
             </div>
           </div>
         </form>
