fix: form  style fix

--- a/IELTS.html
+++ b/IELTS.html
@@ -157,7 +157,7 @@
     
     <section>
       <div class="container3">
-        <h2 class="title">
+        <h2 class="title2">
           IELTS by Neemtree
         </h2>
         <div class="row">
@@ -342,7 +342,7 @@
             <p>Prev</p>
           </button>
           <div class="person"><h4>Kathleen Smith</h4>
-            <h5>Web Designer</h5></div>
+            <h5 class="role">Web Designer</h5></div>
             <button class="P"><p>Next</p><img src="./IELTS.assets/Next.svg" class="nextarrow" />
               
             </button>
