--- a/about.html
+++ b/about.html
@@ -149,13 +149,13 @@
     <div class="container2">
       <div class="align-heading">
         <div>
-          <p class="banner-green">GET IN TOUCH</p>
+          <p class="banner-green">WHAT WE PROVIDE</p>
           <h2 class="title">
-            Our Service
+            Our Services
           </h2>
         </div>
       </div>
-      <p>NEEMTREE provides specialized tools that offer detailed, step-by-step guidance throughout the entire study
+      <p class="first-content">NEEMTREE provides specialized tools that offer detailed, step-by-step guidance throughout the entire study
         abroad journey. Our platform also offers comprehensive, personalized one-on-one counseling to assist students in
         planning their international education path, ranging from selecting the right educational institution to
         providing support once they arrive.
